--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -835,10 +835,11 @@
             "default": "Standard",
             "default-tooltip": "Standardmäßig in Ihrem persönlichen Ordner"
         },
-        "linux-setup": {
-            "title": "Linux-Setup",
-            "proton-folder": "Proton-Ordner",
-            "proton-folder-description": "Wählen Sie den Ordner zum Proton-Pfad aus. (z. B. Proton - Experimental)"
+        "choose-proton-folder": {
+            "title": "Proton-Ordner",
+            "proton-folder-description": "Unter Linux benötigt BSManager Proton, um zu funktionieren. Wählen Sie den Installationsordner von Proton, um fortzufahren.",
+            "proton-folder-placeholder": "Proton-Installationsordner",
+            "where-is-proton-installed": "Wo ist Proton installiert?"
         }
     },
     "maps": {
