--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -180,6 +180,7 @@
                     "zh-CN": "简体中文",
                     "zh-TW": "正體中文",
                     "ja-JP": "日本語",
+                    "ko-KR": "한국어",
                     "translated": {
                         "en-EN": "イギリス英語",
                         "en-US": "アメリカ英語",
@@ -189,7 +190,8 @@
                         "ru-RU": "ロシア語",
                         "zh-CN": "簡体字中国",
                         "zh-TW": "繁体字中国",
-                        "ja-JP": "日本語"
+                        "ja-JP": "日本語",
+                        "ko-KR": "韓国語"
                     }
                 }
             },
