--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -180,6 +180,7 @@
                     "zh-CN": "簡體中文",
                     "zh-TW": "正體中文",
                     "ja-JP": "日本語",
+                    "ko-KR": "한국어",
                     "translated": {
                         "en-EN": "英式英語",
                         "en-US": "美式英語",
@@ -189,7 +190,8 @@
                         "ru-RU": "俄語",
                         "zh-CN": "簡體中文",
                         "zh-TW": "正體中文",
-                        "ja-JP": "日語"
+                        "ja-JP": "日語",
+                        "ko-KR": "韓語"
                     }
                 }
             },
