--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -180,6 +180,7 @@
                     "zh-CN": "简体中文",
                     "zh-TW": "正體中文",
                     "ja-JP": "日本語",
+                    "ko-KR": "한국어",
                     "translated": {
                         "en-EN": "Englisch, Vereinigtes Königreich",
                         "en-US": "Englisch, USA",
@@ -189,7 +190,8 @@
                         "ru-RU": "Russisch",
                         "zh-CN": "Vereinfachtes Chinesisch",
                         "zh-TW": "Traditionelles Chinesisch",
-                        "ja-JP": "Japanisch"
+                        "ja-JP": "Japanisch",
+                        "ko-KR": "Koreanisch"
                     }
                 }
             },
