--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -180,6 +180,7 @@
                     "zh-CN": "简体中文",
                     "zh-TW": "正體中文",
                     "ja-JP": "日本語",
+                    "ko-KR": "한국어",
                     "translated": {
                         "en-EN": "Английский, Великобритания",
                         "en-US": "Английский, США",
@@ -189,7 +190,8 @@
                         "ru-RU": "Русский",
                         "zh-CN": "Китайский (упрощенный)",
                         "zh-TW": "Китайский (традиционный)",
-                        "ja-JP": "Японский"
+                        "ja-JP": "Японский",
+                        "ko-KR": "Корейский"
                     }
                 }
             },
