--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -180,6 +180,7 @@
                     "zh-CN": "简体中文",
                     "zh-TW": "正體中文",
                     "ja-JP": "日本語",
+                    "ko-KR": "한국어",
                     "translated": {
                         "en-EN": "英式英语",
                         "en-US": "美式英语",
@@ -189,7 +190,8 @@
                         "ru-RU": "俄语",
                         "zh-CN": "简体中文",
                         "zh-TW": "正体中文",
-                        "ja-JP": "日语"
+                        "ja-JP": "日语",
+                        "ko-KR": "韩语"
                     }
                 }
             },
