Text wrap bug and incorrect translation of "Curated"

--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -1076,7 +1076,7 @@
             "Latest": "최신",
             "Relevance": "관련성",
             "Rating": "평점",
-            "Curated": "엄선됨"
+            "Curated": "선별됨"
         }
     },
     "auto-update": {
