--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -17,7 +17,9 @@
         "copied": "복사 완료!",
         "confirm": "확인",
         "choose-folder": "폴더를 선택하세요",
-        "unknown": "알 수 없는 오류가 발생했습니다 (´・ω・`)"
+        "unknown": "알 수 없는 오류가 발생했습니다 (´・ω・`)",
+        "warning": "경고",
+        "continue": "계속"
     },
     "nav-bar": {
         "add-version": "버전 추가",
@@ -838,6 +840,9 @@
             "proton-folder-description": "Linux에서는 BSManager가 작동하려면 Proton이 필요합니다. 계속하려면 Proton 설치 폴더를 선택하세요.",
             "proton-folder-placeholder": "Proton 설치 폴더",
             "where-is-proton-installed": "Proton이 설치된 위치는 어디인가요?"
+        },
+        "bs-version-outdated": {
+            "body": "버전 {outdatedVersion}은(는) 오래되어 일부 모드나 기능이 예상대로 작동하지 않을 수 있습니다. 최신 기능과 버그 수정 사항을 즐기기 위해 Beat Saber의 최신 권장 버전 ({recommendedVersion})을 다운로드하십시오."
         }
     },
     "maps": {
