--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -442,7 +442,8 @@
                     "PROTON_NOT_SET": "Dossier Proton non défini",
                     "PROTON_NOT_FOUND": "Binaire Proton non trouvé",
                     "EXIT": "Arrêt brutal",
-                    "OCULUS_LIB_NOT_FOUND": "Librairie Oculus introuvable"
+                    "OCULUS_LIB_NOT_FOUND": "Librairie Oculus introuvable",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "Version originale Oculus non trouvée"
                 },
                 "msg": {
                     "UNKNOWN_ERROR": "Une erreur inconnue s'est produite.",
@@ -453,7 +454,8 @@
                     "EXIT": "Beat Saber s'est arrêté brusquement, essaye de vérifier les fichiers.",
                     "OCULUS_LIB_NOT_FOUND": "Vérifie que l'application Oculus est correctement installée, et que les librairies sont bien définies dans Oculus.",
                     "PROTON_NOT_SET": "Définissez le chemin de Proton dans les paramètres.",
-                    "PROTON_NOT_FOUND": "Définissez le chemin de Proton dans les paramètres."
+                    "PROTON_NOT_FOUND": "Définissez le chemin de Proton dans les paramètres.",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "Téléchargez la version originale de Beat Saber depuis Oculus avant de l'ouvrir."
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Lancer Steam"
@@ -775,7 +777,7 @@
         },
         "create-launch-shortcut": {
             "title": "Créer un raccourci",
-            "desc": "Créer un raccourci te permettra de démarrer Beat Saber avec les options choisi sans passé par BSManager.",
+            "desc": "Créer un raccourci te permettra de démarrer Beat Saber avec les options choisies sans passer par BSManager.",
             "launch-options": "Options de lancement",
             "advanced-launch": "Lancement avancé",
             "valid-btn": "Créer le raccourci"
