--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -442,7 +442,8 @@
                     "PROTON_NOT_SET": "Proton folder not set",
                     "PROTON_NOT_FOUND": "Proton binary not found",
                     "EXIT": "Abrupt stop",
-                    "OCULUS_LIB_NOT_FOUND": "Oculus library not found"
+                    "OCULUS_LIB_NOT_FOUND": "Oculus library not found",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "Original Oculus version not found"
                 },
                 "msg": {
                     "UNKNOWN_ERROR": "An unknown error has occurred.",
@@ -453,7 +454,8 @@
                     "EXIT": "BeatSaber stopped abruptly, tries to check the files.",
                     "OCULUS_LIB_NOT_FOUND": "Check that the Oculus application is properly installed, and that the libraries are correctly defined in Oculus.",
                     "PROTON_NOT_SET": "Set the Proton path in settings.",
-                    "PROTON_NOT_FOUND": "Set the Proton path in settings."
+                    "PROTON_NOT_FOUND": "Set the Proton path in settings.",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "Download the original Beat Saber from Oculus before opening."
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Launch Steam"
