--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -442,7 +442,8 @@
                     "PROTON_NOT_SET": "Proton 폴더가 설정되지 않음",
                     "PROTON_NOT_FOUND": "Proton 바이너리를 찾을 수 없음",
                     "EXIT": "긴급 중지",
-                    "OCULUS_LIB_NOT_FOUND": "Oculus 라이브러리를 찾을 수 없음"
+                    "OCULUS_LIB_NOT_FOUND": "Oculus 라이브러리를 찾을 수 없음",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "원본 Oculus 버전을 찾을 수 없습니다"
                 },
                 "msg": {
                     "UNKNOWN_ERROR": "알 수 없는 오류가 발생했습니다.",
@@ -453,7 +454,8 @@
                     "EXIT": "Beat Saber가 긴급 중지되었습니다. 파일을 점검합니다.",
                     "OCULUS_LIB_NOT_FOUND": "Oculus 앱이 올바르게 설치되었는지와 Oculus 라이브러리가 올바르게 정의되었는지 확인하세요.",
                     "PROTON_NOT_SET": "설정에서 Proton 경로를 설정하세요.",
-                    "PROTON_NOT_FOUND": "설정에서 Proton 경로를 설정하세요."
+                    "PROTON_NOT_FOUND": "설정에서 Proton 경로를 설정하세요.",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "열기 전에 Oculus에서 원본 Beat Saber를 다운로드하십시오."
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Steam 실행"
