--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -442,7 +442,8 @@
                     "PROTON_NOT_SET": "Proton文件夹未设置",
                     "PROTON_NOT_FOUND": "未找到Proton二进制文件",
                     "EXIT": "突然停止",
-                    "OCULUS_LIB_NOT_FOUND": "未找到 Oculus 库"
+                    "OCULUS_LIB_NOT_FOUND": "未找到 Oculus 库",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "未找到原始Oculus版本"
                 },
                 "msg": {
                     "UNKNOWN_ERROR": "发生未知错误。",
@@ -453,7 +454,8 @@
                     "EXIT": "BeatSaber 突然停止，请检查文件。",
                     "OCULUS_LIB_NOT_FOUND": "检查 Oculus 应用是否正确安装，以及库是否在 Oculus 中正确定义。",
                     "PROTON_NOT_SET": "在设置中设置Proton路径。",
-                    "PROTON_NOT_FOUND": "在设置中设置Proton路径。"
+                    "PROTON_NOT_FOUND": "在设置中设置Proton路径。",
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "在打开之前，请从Oculus下载原版Beat Saber。"
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "启动 Steam"
