--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -795,7 +795,7 @@
         "original-version-backup-oculus": {
             "title": "Внимание",
             "body": {
-                "must-be-installed-once": "Вы должны были установить Beat Saber хотя бы один раз из Oculus Store, иначе Beat Saber может автоматически закрыться после запуска.",
+                "must-be-installed-once": "Вы должны установить Beat Saber из магазина Oculus на этом устройстве, в противном случае Beat Saber автоматически закроется после запуска.",
                 "will-backup": "Для запуска этой версии исходная папка установки Beat Saber, находящаяся в вашей библиотеке Oculus, будет переименована и автоматически восстановлена при выходе из Beat Saber."
             },
             "not-remind-me": "Больше не напоминать",
