--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -795,7 +795,7 @@
         "original-version-backup-oculus": {
             "title": "Atención",
             "body": {
-                "must-be-installed-once": "Debes haber instalado Beat Saber al menos una vez desde la Oculus Store, de lo contrario, Beat Saber podría cerrarse automáticamente después de iniciar.",
+                "must-be-installed-once": "Debes tener Beat Saber instalado desde la tienda de Oculus en este dispositivo, de lo contrario, Beat Saber se cerrará automáticamente después de iniciarse.",
                 "will-backup": "Para lanzar esta versión, la carpeta de instalación original de Beat Saber ubicada en tu biblioteca de Oculus será renombrada y se restaurará automáticamente al cerrar Beat Saber."
             },
             "not-remind-me": "No volver a recordármelo",
