--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -795,7 +795,7 @@
         "original-version-backup-oculus": {
             "title": "注意",
             "body": {
-                "must-be-installed-once": "少なくとも一度はOculus StoreからBeat Saberをインストールしている必要があります。そうしないとBeat Saberは起動後に自動的に終了する可能性があります。",
+                "must-be-installed-once": "このデバイスにOculusストアからBeat Saberをインストールしておく必要があります。そうしないと、Beat Saberは起動後に自動的に閉じます。",
                 "will-backup": "このバージョンを起動するために、OculusライブラリにあるBeat Saberの元のインストールフォルダは名前が変更され、Beat Saberの終了時に自動的に復元されます。"
             },
             "not-remind-me": "二度と表示しないでください",
